Fixed navbar queries and collapse on button press when is mobile. Filled some content in about

--- a/css/style.css
+++ b/css/style.css
@@ -53,11 +53,12 @@ span {
 		to bottom right,
 		rgb(155, 67, 0) 40%,
 		rgb(255, 111, 0));
-	color: rgb(255, 255, 255);
+	color: rgb(193, 142, 59);
 }
 
 
 /*NAVIGATION BAR */
+
 
 nav {
 	background-color: rgb(0, 0, 0);
@@ -76,7 +77,7 @@ nav div li {
 
 .navbar-dark .navbar-nav .nav-link {
 	color: rgb(255, 111, 0);
-} 
+}
 
 .navbar-dark .navbar-nav .nav-link:hover {
 	color: rgb(245, 228, 214);
@@ -105,7 +106,7 @@ nav div li {
 }
 
 header {
-	background: url("../images/coff3.jpeg") no-repeat;
+	background: url("../images/coff3.jpeg") no-repeat fixed;
 	background-size: cover;
 	height: 100vh;
 }
@@ -132,6 +133,19 @@ table, th, td {
 	min-height: 250px;
 	width: auto;
 }
+
+.card-header li {
+	list-style: none;
+	display: inline-block;
+	margin: 0 auto;
+	width: 31%;
+
+	color: rgb(155, 67, 0);
+	border-radius: 5px;
+
+}
+
+
 
 
 /* FOOTER */
